Added facebook login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">chatapp</string>
+    <string name="app_name">Chat Application</string>
+    <string name="facebook_app_id">479603152656310</string>
+    <string name="fb_login_protocol_scheme">fb479603152656310</string>
 </resources>
