--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
 
     <string name="splash_layout_content">WelcomeImage</string>
     <string name="splash_layout_welcome">Welcome!</string>
+
+    <string name="channel_name">ChatApp Channel</string>
+    <string name="channel_description">Channel for handling push notifications</string>
 </resources>
