Abillity to pick between camera or gallery added. Scales down the image.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
 
     <string name="channel_name">ChatApp Channel</string>
     <string name="channel_description">Channel for handling push notifications</string>
+
+    <string name="dialog_title">Image source</string>
+    <string name="dialog_ok_button">Olk</string>
+    <string name="dialog_cancel_button">Cancel</string>
 </resources>
