--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="dialog_title">Image source</string>
     <string name="dialog_ok_button">Olk</string>
     <string name="dialog_cancel_button">Cancel</string>
+
+    <string name="default_notification_channel_id">ChatAppNotificationId</string>
 </resources>
