Whenever the user connects the FirebaseMessageInteractor updates the messaging preferences to the users.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="permission_dialog_text">Do you want to receive notifications for this chatroom?</string>
     <string name="permission_dialog_ok_button">Yes</string>
     <string name="permission_dialog_cancel_button">No</string>
+
+    <string name="msg_subscribed">You have subscribed to a new topic</string>
+    <string name="msg_subscribe_failed">You failed to subscribe to a new topic</string>
 </resources>
