Most likely last commit. Added deep-linking to the correct chatroom based on the notification.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="channel_description">Channel for handling push notifications</string>
 
     <string name="dialog_title">Image source</string>
-    <string name="dialog_ok_button">Olk</string>
+    <string name="dialog_ok_button">Ok</string>
     <string name="dialog_cancel_button">Cancel</string>
 
     <string name="default_notification_channel_id">ChatAppNotificationId</string>
@@ -22,4 +22,7 @@
 
     <string name="msg_subscribed">You have subscribed to a new topic</string>
     <string name="msg_subscribe_failed">You failed to subscribe to a new topic</string>
+
+    <string name="intent_filter_deep_link_http">deepLinkIntent</string>
+    <string name="intent_filter_deep_link_example">deepLinkExample</string>
 </resources>
